# news_parsing

./: .cursorrules  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  logger.py  pyproject.toml  requirements.txt  t.ipynb
.git.backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.git.backup/logs/: HEAD
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/common/: file.py  redis_client.py
airflow/dags/: _rss_feed_dag.py  html_parser_json_export_dag.py  news_pipeline.py  news_pipeline_dag.py  news_test_pipeline_dag.py
airflow/managers/: __init__.py  news_file.json  redis_manager.py  s3_manager.py
airflow/tasks/: analyze_article_task.py  download_html_task.py  embed_and_search_task.py  parse_articles_task.py  save_analyze_article_task.py
app/: main.py
app/api/: __init__.py
app/models/: __init__.py  request_models.py  response_models.py
app/services/: __init__.py  analyzer_service.py  search_service.py  summary_service.py
common/: config.py  openai_client.py  redis_manager.py
crawler/: Dockerfile  crawler.py
feed_package/: Dockerfile  MANIFEST.in
feed_package/data/: news_file.json
feed_package/rss_feed_package/: requirements.txt  setup.py  test_full.py
html_downloader/html_downloader/: download.py
html_parser/: Dockerfile  __init__.py  docker-compose.yml  parser.py  parser_factory.py  requirements.txt  setup.py  test_parser.py
indexer/: Dockerfile  __init__.py  indexer.py  query_tool.py  setup.py  test_indexer.py
pipeline/: __init__.py
retriever/: retriever.py
test/: test_vectorstore.py
(+129 files in other folders)
