[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news_pipeline"
version = "0.1.0"
description = "뉴스 수집, 파싱, 임베딩, 검색, 분석하는 전체 파이프라인"
authors = [
    { name = "너의 이름", email = "your@email.com" }
]
dependencies = [
    "openai",
    "qdrant-client",
    "feedparser",
    "requests",
    "redis",
    "python-dotenv",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}