[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news_pipeline"
version = "0.1.0"
description = "뉴스 수집, 파싱, 임베딩, 검색, 분석하는 전체 파이프라인"
authors = [
    { name = "너의 이름", email = "your@email.com" }
]
dependencies = [
    "openai",
    "qdrant-client",
    "tiktoken",
    "feedparser"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"hybrid_economy_predictor" = ["hybrid_economy_predictor/model/*.joblib"]

[tool.pyright]
include = ["pipeline"]
extraPaths = ["/Users/lee/Desktop/news_parsing/pipeline"]
